syntax = "proto3";

package guides.v1;

option java_multiple_files = true;
option java_outer_classname = "GuideProto";
option java_package = "com.contoso.cams.protobuf.guides.v1";

message GuideUploadUrlRequest {
  string file_name = 1;
}

message GuideUploadUrlResponse {
  string upload_url = 1;
  string file_name = 2;
}


service SupportGuideService {
    rpc GetGuideUploadUrl(GuideUploadUrlRequest) returns (GuideUploadUrlResponse) {}
}

